[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rackcorpapi"
version = "0.1.0"
dependencies = [
    "requests~=2.32.3",
]

[dependency-groups]
dev = [
    "pytest~=8.3.5",
    "dnspython~=2.7.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "dnspython~=2.7.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

